# cairn

./: .gitignore  BUGS.md  CLAUDE.md  Cargo.toml  DESIGN.md  ISSUES.md  biome.json  flake.nix  schema.graphql
.claude/: settings.json
_assets/: check-uuid-uniqueness.sh  keys-by-type.sh  scan-jsonl-keys.sh
_assets/schema-inference/: pyproject.toml
_assets/schema-inference/src/schema_inference/: __init__.py  __main__.py  detect.py  discriminators.py  schema.py
_assets/schema-inference/tests/: conftest.py  test_detect.py  test_discriminators.py  test_schema.py
_assets/schema-inference/tests/fixtures/: k8s_workload.json  messaging.json  pet_store.json
_assets/scripts/: extract-messages.sh  infer_schema.py
cairn-web/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  vite.element.config.ts  vitest.config.ts  vitest.integration.config.ts
cairn-web/src/: app.css  app.d.ts  app.html
cairn-web/src/lib/: format.test.ts  format.ts  sessionSpecForm.test.ts  sessionSpecForm.ts
cairn-web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
cairn-web/tests/integration/: globalSetup.ts  harness.ts  interop.test.ts  wsmux.test.ts
crates/cairn-client/: Cargo.toml
crates/cairn-client/src/: attach.rs  cli.rs  connect.rs  detach.rs  exec.rs  inspect.rs  kick.rs  kill.rs  list.rs  logs.rs  main.rs  meta.rs  rename.rs  restart.rs  send.rs  signals.rs  targets.rs  terminal.rs  wait.rs
crates/cairn-client/tests/: attach_pty.rs  non_interactive.rs
crates/cairn-client/tests/common/: mod.rs
crates/cairn-core/: Cargo.toml
crates/cairn-core/examples/: echo.rs
crates/cairn-core/src/: lib.rs  pty.rs
crates/cairn-core/src/pty/: mod.rs  session.rs  subscription.rs  types.rs
crates/cairn-core/src/pty/ghostty/: mod.rs  worker.rs
crates/cairn-core/tests/: pty_io.rs  pty_lifecycle.rs  pty_resize.rs
crates/cairn-daemon/: Cargo.toml  build.rs
crates/cairn-daemon/src/: config.rs  daemon.rs  error.rs  http_proxy.rs  identity.rs  lib.rs  listen.rs  main.rs  registry.rs  serve.rs  signal.rs  spawn.rs  telemetry.rs  tls.rs  ws.rs
crates/cairn-daemon/src/auth/: mod.rs  none.rs  tailscale.rs  tailscale_serve.rs
crates/cairn-daemon/src/config/: args.rs  mod.rs
crates/cairn-daemon/src/handlers/: attach.rs  http_proxy.rs  logs.rs  meta.rs  mod.rs  send.rs  sessions.rs  wait.rs  watch.rs
crates/cairn-daemon/src/serve/: assets.rs  auth.rs  cairn_json.rs  http.rs  mod.rs  wrpc.rs
crates/cairn-daemon/src/serve/transport/: mod.rs  unix.rs  web_ui.rs  websocket.rs  webtransport.rs  ws_mux.rs
crates/cairn-daemon/tests/: daemon_meta.rs  daemon_streaming.rs  daemon_unary.rs  smoke.rs  web_ui.rs  ws_mux.rs  ws_smoke.rs  wt_smoke.rs
crates/cairn-daemon/tests/common/: mod.rs
crates/cairn-http-proxy/: Cargo.toml
crates/cairn-http-proxy/src/: authority.rs  capture.rs  lib.rs  proxy.rs  route.rs
crates/cairn-http-proxy/tests/: proxy.rs
crates/cairn-protocol/: Cargo.toml
crates/cairn-protocol/examples/: webtest.rs
crates/cairn-protocol/src/: lib.rs
crates/cairn-protocol/tests/: golden.rs  round_trip.rs
crates/cairn-protocol/tests/common/: mod.rs
crates/cairn-protocol/tests/golden/: cairn-error.json  exit-status-clean.json  exit-status-killed.json  interceptor-action-fail.json  observation-event-request-start.json  observed-exchange.json  session-spec.json  version-info.json
crates/cairn-protocol/wit/: cairn.wit
crates/cairn-pty/: Cargo.toml  build.rs
crates/cairn-pty/examples/: echo.rs
crates/cairn-pty/src/: client_id.rs  error.rs  lib.rs  session.rs  subscription.rs  types.rs
crates/cairn-pty/src/ghostty/: input_classifier.rs  mod.rs  process.rs  worker.rs
crates/cairn-pty/tests/: callback_gating.rs  pty_io.rs  pty_lifecycle.rs  pty_multi_client.rs  pty_resize.rs  pty_signal.rs  snapshot_completeness.rs
crates/cairn-webtest/: Cargo.toml
crates/cairn-webtest/src/: main.rs
crates/ccmux-app/: Cargo.toml
crates/ccmux-app/assets/: style.css
crates/ccmux-app/src/: api.rs  cli.rs  main.rs  routes.rs  server_fns.rs
crates/ccmux-index/: Cargo.toml
crates/ccmux-index/src/: db.rs  indexer.rs  lib.rs  query.rs
crates/ccmux-index/src/migrations/: V1__initial.sql
crates/ccmux-index/tests/: index_test.rs
docs/: webtransport-quickstart.md
docs/architecture/pty-session/: README.md  authentication.md  backpressure.md  client-attach-and-election.md  configuration.md  daemon-process-model.md  error-recovery.md  external-protocol.md  internal-communication.md  observability.md  pty-lifecycle.md  query-response-delegation.md  resize-semantics.md  terminal-state-and-replay.md  testing.md  transports.md  web-vs-cli-clients.md  worker-backends.md
docs/superpowers/plans/: 2026-03-11-dioxus-migration.md  2026-03-12-post-migration-fixup.md  2026-03-14-markdown-session-view.md  2026-03-26-session-indexing-search.md  2026-05-22-libghostty-callbacks.md  2026-05-22-pty-process-migration.md  2026-05-22-pty-session-trait.md  2026-05-23-pty-multi-client-semantics.md  2026-05-24-snapshot-completeness-expected-failures.md  2026-05-26-cairn-protocol-crate.md  2026-05-26-daemon-core.md  2026-05-26-daemon-foundation.md  2026-05-26-daemon-streaming.md  2026-05-27-cli-client-daemon-prereqs.md  2026-05-27-cli-client-interactive-attach.md  2026-05-27-cli-client-non-interactive-commands.md  2026-05-28-webtransport.md  2026-06-01-auth-backend-redesign.md  2026-06-01-observability.md  2026-06-02-serve-transport-refactor.md  2026-06-13-web-ui.md  2026-07-11-web-ui-v2.md  2026-07-17-session-list-subscription.md  2026-07-17-ws-mux.md
docs/superpowers/specs/: 2026-03-12-post-migration-fixup-design.md  2026-03-14-markdown-session-view-design.md  2026-03-26-session-indexing-search-design.md  2026-05-22-libghostty-callbacks-design.md  2026-05-22-pty-session-trait-design.md  (+17 more)
nix/: hooks.nix  validate-changes.sh
research/event-log-formats/: claude-code.md
src/: main.rs
src/graphql/: event_types.graphql  mod.rs  query.rs  subscription.rs  types.rs
src/session/: loader.rs
web/: codegen.ts  package.json  tsconfig.json  vite.config.ts
web/src/: app.css
(+99 files in other folders)
