[package]
name = "ccmux"
version = "0.1.0"
edition = "2024"
default-run = "ccmux"

[dependencies]
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
futures-core = "0.3"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
