[workspace]
members = ["crates/*"]
resolver = "3"
package.version = "0.1.0"
package.edition = "2024"
package.rust-version = "1.93.0"
package.authors = ["Abraham White <cairn@abewhite.dev>"]
exclude = [".worktrees"]

[workspace.dependencies]
# Shared third-party dependencies. Crate-specific feature sets are layered on at
# the member with `features = [...]` (additive with whatever is declared here).
anyhow = { version = "1", default-features = false, features = ["std"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
bytes = { version = "1", default-features = false }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive", "wrap_help", "env"] }
futures = { version = "0.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
snafu = { version = "0.9.0", features = ["backtrace"] }
tokio = { version = "1.52", default-features = false }
tracing = { version = "0.1.44" }
wrpc-transport = { version = "0.29", default-features = false, features = ["net"] }
wrpc-transport-web = { version = "0.3", default-features = false }
wtransport = { version = "0.7", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
