[project]
name = "schema-inference"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "genson>=1.3",
    "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "hypothesis-jsonschema>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schema_inference"]

[tool.pytest.ini_options]
testpaths = ["tests"]
