[package]
# package name becomes bin name, so we use just 'cairn'
# though the folder is 'cairn-client' to disambiguate from the daemon
name = "cairn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "A client for the cairn session manager daemon"

[dependencies]
clap.workspace = true
clap_complete = { version = "4.6" }
anyhow = { workspace = true, features = ["backtrace"] }
strum = { version = "0.28", features = ["derive"] }
humantime = { version = "2.3" }
url = { version = "2.5" }
tracing.workspace = true
