[package]
# package name becomes bin name, so we use just 'cairn'
# though the folder is 'cairn-client' to disambiguate from the daemon
name = "cairn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "A client for the cairn session manager daemon"

[dependencies]
clap.workspace = true
clap_complete = { version = "4.6" }
anyhow = { workspace = true, features = ["backtrace"] }
strum = { version = "0.28", features = ["derive"] }
humantime = { version = "2.3" }
url = { version = "2.5" }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
bytes.workspace = true
futures.workspace = true
globset = { version = "0.4", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time", "io-std"] }
nix = { version = "0.29", features = ["term", "ioctl"] }
cairn-protocol = { path = "../cairn-protocol" }
wrpc-transport.workspace = true
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }
strip-ansi-escapes = "0.2"

[dev-dependencies]
cairn-daemon = { path = "../cairn-daemon" }
tempfile = "3"
libc = "0.2"
tokio-util = "0.7"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net"] }
