[package]
name = "cairn-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "The cairn session-manager daemon"

[[bin]]
name = "cairn-daemon"
path = "src/main.rs"

[lib]
name = "cairn_daemon"
path = "src/lib.rs"

[dependencies]
cairn-pty = { path = "../cairn-pty" }
cairn-protocol = { path = "../cairn-protocol" }
wrpc-transport.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "signal", "macros", "sync", "time", "io-util"] }
wrpc-transport-web.workspace = true
wtransport.workspace = true
rustls.workspace = true
rcgen = { workspace = true, features = ["pem"] }
serde.workspace = true
serde_json.workspace = true
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v7"] }
bytes.workspace = true
libc = "0.2"
nix = { version = "0.29", features = ["signal", "user"] }
tokio-stream = "0.1"
humantime = "2"
ring = "0.17"
time = { version = "0.3", features = ["std"] }
rustls-pki-types = "1"

[dev-dependencies]
tempfile = { version = "3", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "time", "fs", "process"] }
libc = "0.2"
nix = { version = "0.29", features = ["signal", "user"] }
wrpc-transport.workspace = true
wrpc-transport-web.workspace = true
wtransport.workspace = true
cairn-protocol = { path = "../cairn-protocol" }
