[package]
name = "cairn-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "The cairn session-manager daemon"

[[bin]]
name = "cairn-daemon"
path = "src/main.rs"

[lib]
name = "cairn_daemon"
path = "src/lib.rs"

[dependencies]
cairn-pty = { path = "../cairn-pty" }
cairn-protocol = { path = "../cairn-protocol" }
wrpc-transport.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "signal", "macros", "sync", "time", "io-util"] }
wrpc-transport-web.workspace = true
# wRPC WebSocket integration: provides the version-agnostic `split()` adapter
# (WebSocketStream -> AsyncRead/AsyncWrite frame halves) and a re-exported,
# version-matched `tokio_websockets`. Pinned to a git commit because the crate
# is unpublished. See the transport module docs for why only `split` is used.
wrpc-websockets = { git = "https://github.com/bytecodealliance/wrpc", rev = "5a92c5c29e47d918ff15fb76455427fbcbddd423", default-features = false, features = ["ring", "rand"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1"] }
wtransport.workspace = true
rustls.workspace = true
rcgen = { workspace = true, features = ["pem"] }
serde.workspace = true
serde_json.workspace = true
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
# Header types shared by the auth layer (`TransportContext::Http`) and axum,
# which re-exports this same crate/version.
http = "1"
tokio-util = { version = "0.7", features = ["rt"] }
futures.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.33", default-features = false }
uuid = { version = "1", features = ["v7"] }
base64.workspace = true
bytes.workspace = true
libc = "0.2"
nix = { version = "0.29", features = ["signal", "user"] }
tokio-stream = "0.1"
humantime = "2"
ring = "0.17"
time = { version = "0.3", features = ["std"] }
rustls-pki-types = "1"
url = { version = "2.5" }

[dev-dependencies]
tempfile = { version = "3", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "time", "fs", "process", "io-util"] }
libc = "0.2"
nix = { version = "0.29", features = ["signal", "user"] }
wrpc-transport.workspace = true
wrpc-transport-web.workspace = true
wrpc-websockets = { git = "https://github.com/bytecodealliance/wrpc", rev = "5a92c5c29e47d918ff15fb76455427fbcbddd423", default-features = false, features = ["ring", "rand"] }
wtransport.workspace = true
cairn-protocol = { path = "../cairn-protocol" }
bytes.workspace = true
futures.workspace = true
http = "1"
