[package]
name = "cairn-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "The cairn session-manager daemon"

[[bin]]
name = "cairn-daemon"
path = "src/main.rs"

[lib]
name = "cairn_daemon"
path = "src/lib.rs"

[dependencies]
cairn-pty = { path = "../cairn-pty" }
cairn-protocol = { path = "../cairn-protocol" }
wrpc-transport.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "signal", "macros", "sync", "time", "io-util"] }
wrpc-transport-web.workspace = true
# wRPC WebSocket integration: provides the version-agnostic `split()` adapter
# (WebSocketStream -> AsyncRead/AsyncWrite frame halves) and a re-exported,
# version-matched `tokio_websockets`. Pinned to a git commit because the crate
# is unpublished. See the transport module docs for why only `split` is used.
wrpc-websockets = { git = "https://github.com/bytecodealliance/wrpc", rev = "5a92c5c29e47d918ff15fb76455427fbcbddd423", default-features = false, features = ["ring", "rand"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json"] }
wtransport.workspace = true
rustls.workspace = true
rcgen = { workspace = true, features = ["pem"] }
serde.workspace = true
serde_json.workspace = true
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
# Header types shared by the auth layer (`TransportContext::Http`) and axum,
# which re-exports this same crate/version.
http = "1"
tokio-util = { version = "0.7", features = ["rt"] }
# Multi-consumer-friendly channel whose `recv_async` works on `&Receiver` —
# lets the mux acceptor implement wRPC's `Accept` (which takes `&self`)
# without a mutex around a tokio receiver. Same crate cairn-pty uses.
flume = "0.12"
futures.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.33", default-features = false }
uuid = { version = "1", features = ["v7"] }
base64.workspace = true
bytes.workspace = true
libc = "0.2"
nix = { version = "0.29", features = ["signal", "user"] }
tokio-stream = "0.1"
humantime = "2"
ring = "0.17"
time = { version = "0.3", features = ["std"] }
rustls-pki-types = "1"
url = { version = "2.5" }
# SPA asset MIME-type detection for `--web-dir`/embedded serving.
mime_guess = { version = "2", default-features = false }
# Compile-time SPA embed for the `web-ui` feature; optional so a default
# `cargo build` never touches `cairn-web/`. See `build.rs` for the guard that
# turns a missing `cairn-web/build` into a clear build failure instead of an
# opaque proc-macro panic.
include_dir = { version = "0.7", optional = true }

[features]
# Off by default so a plain `cargo build` never requires npm/SvelteKit build
# artifacts. Enabled for release/nix builds to embed `cairn-web/build` at
# compile time (see `serve/assets.rs`).
web-ui = ["dep:include_dir"]

[dev-dependencies]
tempfile = { version = "3", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "time", "fs", "process", "io-util", "test-util"] }
libc = "0.2"
nix = { version = "0.29", features = ["signal", "user"] }
wrpc-transport.workspace = true
wrpc-transport-web.workspace = true
wrpc-websockets = { git = "https://github.com/bytecodealliance/wrpc", rev = "5a92c5c29e47d918ff15fb76455427fbcbddd423", default-features = false, features = ["ring", "rand"] }
wtransport.workspace = true
cairn-protocol = { path = "../cairn-protocol" }
bytes.workspace = true
futures.workspace = true
http = "1"
serde_json.workspace = true
