[package]
name = "cairn-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "WIT schema and generated bindings for the cairn daemon wire protocol"

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false }
wit-bindgen-wrpc = { version = "0.10", default-features = false }
wrpc-transport = { version = "0.28", default-features = false, features = ["net"] }

[dev-dependencies]
tempfile = { version = "3", default-features = false }
tokio = { version = "1", default-features = false, features = ["fs", "macros", "net", "rt"] }
