[package]
name = "cairn-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "WIT schema and generated bindings for the cairn daemon wire protocol"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
wit-bindgen-wrpc = { version = "0.10", default-features = false }
wrpc-transport.workspace = true

[dev-dependencies]
tempfile = { version = "3", default-features = false }
tokio = { workspace = true, features = ["fs", "macros", "net", "rt"] }
