[package]
name = "cairn-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["full"] }
libghostty-vt = { version = "0.2.0" }
async-trait = "0.1"
flume = "0.12"
nix = { version = "0.29", features = ["signal"] }
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }
tracing-opentelemetry = { version = "0.33", default-features = false }
pty-process = { version = "0.4", features = ["async"] }
vte = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "macros"] }
tracing-test = "0.2"
libghostty-vt = "0.2.0"
nix = { version = "0.29", features = ["signal"] }
