# Example client: a small web UI over the daemon's UDS wRPC surface. A handy
# reference for driving the generated cairn_protocol client from an HTTP
# front-end (and a quick way to poke at a running daemon from a browser/phone).
[package]
name = "cairn-webtest"
version.workspace = true
edition.workspace = true
description = "Example web UI over the cairn daemon's Unix-socket wRPC API"
publish = false

[[bin]]
name = "cairn-webtest"
path = "src/main.rs"

[dependencies]
cairn-protocol = { path = "../cairn-protocol" }
wrpc-transport.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
axum = "0.7"
serde = { workspace = true }
futures.workspace = true
bytes.workspace = true
anyhow.workspace = true
shlex = "1"
