[package]
name = "ccmux-index"
version.workspace = true
edition = "2024"

[dependencies]
ccmux-core = { path = "../ccmux-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
